| Bug #36104 | INFORMATION_SCHEMA.TABLES shows TRANSACTIONAL=1 twice in CREATE_OPTIONS | ||
|---|---|---|---|
| Submitted: | 16 Apr 2008 0:10 | Modified: | 10 Jun 2008 11:05 |
| Reporter: | Marc Delisle | ||
| Status: | Closed | ||
| Category: | Server: Maria | Severity: | S3 (Non-critical) |
| Version: | 5.1.23a-maria-alpha | OS: | Any |
| Assigned to: | Guilhem Bichot | Target Version: | |
| Tags: | information_schema, MARIA | ||
| Triage: | D2 (Serious) / R1 (None/Negligible) / E2 (Low) | ||
[16 Apr 2008 0:24]
Marc Delisle
Also, information_schema.TABLES is now reporting this weird information about the same table, in the CREATE_OPTIONS: page_checksum=1 TRANSACTIONAL=1 transactional=1
[16 Apr 2008 21:20]
Marc Delisle
Ok, I just read this report: http://bugs.mysql.com/bug.php?id=34395 so I guess the remaining issue would be the information_schema duplicate option shown.
[25 Apr 2008 14:12]
Sveta Smirnova
Thank you for the report. Closed as duplicate of bug #34395, because last comment.
[25 Apr 2008 14:21]
Marc Delisle
Should I open a new bug about this aspect of the problem: "Also, information_schema.TABLES is now reporting this weird information about the same table, in the CREATE_OPTIONS: page_checksum=1 TRANSACTIONAL=1 transactional=1"
[25 Apr 2008 14:56]
Sveta Smirnova
Marc, thank you for the feedback. I believe this is same problem, so is possible to just stay these 2 bugs linked.
[25 Apr 2008 15:28]
Guilhem Bichot
I confirm that in the latest development tree, we get TRANSACTIONAL=1 transactional=1 in information_schema.TABLES for the Maria table. This duplication is strange. I changed the bug's title accordingly.
[19 May 2008 14:00]
Guilhem Bichot
there is duplicate code in sql/sql_show.cc:get_schema_tables_record():
if (share->transactional != HA_CHOICE_UNDEF)
{
ptr= strxmov(ptr, " TRANSACTIONAL=",
(share->transactional == HA_CHOICE_YES ? "1" : "0"),
NullS);
}
#ifdef WITH_PARTITION_STORAGE_ENGINE
...
#endif
if (share->transactional != HA_CHOICE_UNDEF)
ptr= strxmov(ptr, " transactional=",
ha_choice_values[(uint) share->transactional], NullS);
The first block should be removed (the second one is more recent and more consistent with
the rest of the function).
[10 Jun 2008 11:05]
Guilhem Bichot
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
[30 Jun 2008 20:25]
Bugs System
Pushed into 5.1.25-maria-alpha
[30 Jun 2008 20:30]
Bugs System
Pushed into 5.1.25-maria-alpha
[30 Jun 2008 20:34]
Bugs System
Pushed into 5.1.25-maria-alpha

Description: After switching storage type from MARIA to MyISAM, SHOW CREATE TABLE still shows a MARIA table option. How to repeat: Welcome to the MySQL monitor. Commands end with ; or \g. Your MySQL connection id is 597 Server version: 5.1.23a-maria-alpha MySQL Community Server [Maria] (GPL) Type 'help;' or '\h' for help. Type '\c' to clear the buffer. mysql> use test; Database changed mysql> create table a(a int) engine=maria transactional=1; Query OK, 0 rows affected (0.01 sec) mysql> alter table a engine=myisam; Query OK, 0 rows affected, 1 warning (0.01 sec) Records: 0 Duplicates: 0 Warnings: 0 mysql> show create table a; +-------+----------------------------------------------------------------------------------------------------------------------+ | Table | Create Table | +-------+----------------------------------------------------------------------------------------------------------------------+ | a | CREATE TABLE `a` ( `a` int(11) DEFAULT NULL ) ENGINE=MyISAM DEFAULT CHARSET=latin1 PAGE_CHECKSUM=1 TRANSACTIONAL=1 | +-------+----------------------------------------------------------------------------------------------------------------------+ 1 row in set (0.00 sec)